<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="80dp"
              android:layout_margin="5dp"
              android:background="@color/colorWhite"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:id="@+id/iv_image"
            android:src="@drawable/png_group"
            android:background="@drawable/png_group"
            android:scaleType="centerCrop"
            android:layout_height="50dp"
            android:layout_width="50dp"
    />
    <LinearLayout
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:lines="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:id="@+id/tv_name_group"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/app_name_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:lines="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:id="@+id/tv_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:lines="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:id="@+id/tv_time"
                android:layout_marginTop="10dp"
                android:text="@string/app_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>