<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:background="@color/colorPrimary"
              android:layout_height="60dp">
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/btn_profile"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <ImageView
                android:padding="5dp"
                android:src="@drawable/ic_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tint="@color/colorWhite"
                android:layout_weight="0.8"/>
        <TextView
                android:gravity="center"
                android:text="@string/ca_nhan"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginBottom="5dp"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <ImageView
                android:padding="5dp"
                android:src="@drawable/ic_np"
                android:tint="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>
        <TextView
                android:gravity="center"
                android:text="@string/np"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginBottom="5dp"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ln_home"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <ImageView
                android:padding="5dp"
                android:tint="#fff"
                android:src="@drawable/ic_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>
        <TextView
                android:gravity="center"
                android:text="@string/trang_chu"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginBottom="5dp"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <ImageView
                android:padding="5dp"
                android:tint="@color/colorWhite"
                android:src="@drawable/ic_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>
        <TextView
                android:gravity="center"
                android:text="@string/du_an"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginBottom="5dp"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        <ImageView
                android:padding="10dp"
                android:tint="@color/colorWhite"
                android:src="@drawable/ic_extension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>
        <TextView
                android:gravity="center"
                android:text="@string/tien_ich"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:layout_marginBottom="5dp"/>

    </LinearLayout>

</LinearLayout>