<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:clickable="true"
              android:focusableInTouchMode="true"
              android:id="@+id/ln_profile"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_weight="0.1"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:background="@color/colorPrimary"
                  android:gravity="center_vertical"
                  android:layout_height="0dp">
        <ImageView
                android:padding="5dp"
                android:id="@+id/btn_back_from_profile"
                android:tint="@color/colorWhite"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/chevron_left"/>
        <TextView
                android:text="@string/profile_page"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/tv_profile"
                android:gravity="center"
                android:textColor="#FFF"
                android:layout_weight="3"
                android:textSize="20sp"/>
        <TextView android:layout_width="60dp"
                  android:visibility="visible"
                  android:id="@+id/edit_profile"
                  android:text="@string/Edit"
                  android:textSize="18sp"
                  android:textColor="@color/colorWhite"
                  android:gravity="center"
                  android:layout_height="match_parent"/>
        <TextView android:layout_width="60dp"
                  android:id="@+id/edit_done_profile"
                  android:text="@string/done"
                  android:textSize="18sp"
                  android:visibility="gone"
                  android:textColor="@color/colorWhite"
                  android:gravity="center"
                  android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical"
                  android:layout_height="0dp">
        <FrameLayout android:layout_width="match_parent"
                     android:layout_weight="0.35"
                     android:layout_height="0dp"
                     tools:ignore="NestedWeights">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="30dp"
                    android:id="@+id/cover_profile"
                    android:src="@drawable/cover"/>
            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                                          android:id="@+id/avatar"
                                                          android:layout_height="80dp"
                                                          android:layout_width="80dp"
                                                          android:layout_gravity="center|bottom"
                                                          android:background="@drawable/ic_account"
                                                          app:civ_border_width="0.2dp"
                                                          android:src="@drawable/default_avatar"
                                                          app:civ_border_color="#dadada"/>
        </FrameLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_weight="0.1"
                      android:layout_height="0dp">
            <TextView android:layout_width="match_parent"
                      android:textColor="@color/colorPrimary"
                      android:textStyle="bold"
                      android:lines="1"
                      android:ellipsize="end"
                      android:singleLine="true"
                      android:gravity="center" android:layout_height="wrap_content"
                      android:id="@+id/username_profile"
                      android:text="@string/user_name"
                      android:textSize="20sp"/>
            <TextView
                    android:lines="1"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:layout_width="match_parent" android:gravity="center"
                    android:layout_height="wrap_content" android:textColor="@color/colorPrimary"
                    android:id="@+id/email_profile"
                    android:text="@string/email"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_weight="0.6"
                android:layout_height="0dp">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="30dp"
                          android:layout_marginTop="20dp"
                          android:orientation="horizontal">
                <TextView android:layout_width="100dp" android:text="Ngày sinh"
                          android:gravity="center_vertical"
                          android:textColor="#636363"
                          android:layout_height="match_parent"/>
                <LinearLayout android:layout_width="200dp"
                              android:textColor="#262626"
                              android:enabled="false"
                              android:ellipsize="end"
                              android:layout_height="match_parent"
                              android:id="@+id/ln_birthday"
                              android:orientation="horizontal">
                    <EditText android:layout_width="160dp"
                              android:textColor="#262626"
                              android:enabled="false"
                              android:textSize="18sp"
                              android:lines="1"
                              android:inputType="date"
                              android:ellipsize="end"
                              android:singleLine="true"
                              android:layout_height="wrap_content"
                              android:hint="dd/mm/yyyy"
                              android:id="@+id/edt_birthday"/>
                    <ImageView android:layout_width="40dp"
                               android:layout_gravity="center"
                               android:src="@drawable/ic_date"
                               android:id="@+id/iv_pick_date"
                               android:layout_height="30dp"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="30dp"
                          android:layout_marginTop="20dp"
                          android:orientation="horizontal">
                <TextView android:layout_width="100dp"
                          android:text="@string/gender"
                          android:gravity="center_vertical"
                          android:textColor="#636363"
                          android:layout_height="match_parent"/>
                <Spinner android:layout_width="200dp" android:textColor="#262626"
                         android:enabled="false"
                         android:autofillHints="Giới tính"
                         android:id="@+id/gender_spinner"
                         android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="30dp"
                          android:layout_marginTop="20dp"
                          android:orientation="horizontal">
                <TextView android:layout_width="100dp" android:textColor="#636363"
                          android:gravity="center_vertical"
                          android:text="Điện thoại" android:layout_height="match_parent"/>
                <EditText android:layout_width="200dp" android:textColor="#262626"
                          android:enabled="false"
                          android:inputType="phone"
                          android:lines="1"
                          android:ellipsize="end"
                          android:singleLine="true"
                          android:maxLength="20"
                          android:maxLines="10"
                          android:layout_height="match_parent"
                          android:id="@+id/edt_phone_number"
                          android:hint="@string/your_phone_number"/>
            </LinearLayout>
            <Button
                    android:text="@string/log_out"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:textColor="#fff"
                    android:background="@drawable/button_frame"
                    android:layout_marginTop="30dp"
                    android:layout_height="30dp" android:id="@+id/btn_logout"/>
        </LinearLayout>
    </LinearLayout>
    <include
            android:layout_weight="0.1"
            layout="@layout/actionbarbottom_common"
            android:layout_height="0dp" android:layout_width="match_parent"/>

</LinearLayout>