<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="30dp"
        android:id="@+id/ln_signIn"
        android:gravity="center">

    <ImageView
            android:textSize="40sp"
            android:paddingTop="40dp"
            android:paddingBottom="60dp"
            android:src="@drawable/logomobile"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="0dp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_weight="0.2"
                  android:orientation="vertical"
                  android:layout_height="0dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content"
                       android:src="@drawable/email_outline"
                       android:layout_gravity="center_vertical"
                       android:layout_height="wrap_content"/>
            <EditText
                    android:lines="1"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:id="@+id/edt_email_signin"
                    android:backgroundTint="#00FFFFFF"
                    android:textColorHint="#9AFFFFFF"
                    android:padding="5dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageView android:layout_width="match_parent"
                   android:background="@color/colorWhite"
                   android:layout_marginBottom="10dp"
                   android:layout_height="0.5dp"/>
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content"
                       android:src="@drawable/pass_outline"
                       android:layout_gravity="center_vertical"
                       android:layout_height="wrap_content"/>
            <EditText
                    android:lines="1"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/colorWhite"
                    android:id="@+id/edt_password_signin"
                    android:textColorHint="#9AFFFFFF"
                    android:backgroundTint="#00FFFFFF"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:hint="@string/pass"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageView android:layout_width="match_parent"
                   android:background="@color/colorWhite"
                   android:layout_height="0.5dp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:layout_height="0dp">
        <ImageView android:layout_width="wrap_content"
                   android:visibility="visible"
                   android:id="@+id/uncheck_remember"
                   android:src="@drawable/radiobox_blank"
                   android:layout_gravity="center_vertical"
                   android:padding="3dp"
                   android:layout_height="wrap_content"/>
        <ImageView android:layout_width="wrap_content"
                   android:id="@+id/check_remember"
                   android:visibility="gone"
                   android:src="@drawable/check_circle_outline"
                   android:layout_gravity="center_vertical"
                   android:padding="3dp"
                   android:layout_height="wrap_content"/>
        <TextView
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:id="@+id/remember_pass"
                android:text="@string/remember_pass"
                android:layout_width="159dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="#E73333"
                android:background="@drawable/bg_login"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:gravity="center"
                  android:layout_weight="0.15"
                  android:orientation="vertical" android:layout_height="0dp">
        <TextView
                android:id="@+id/tv_goRegister"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/bg_border_btn"
                android:textColor="@color/colorWhite"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:orientation="vertical" android:gravity="bottom" android:layout_weight="0.28" android:layout_height="0dp">
        <TextView
                android:text="@string/forgot_your_password"
                android:id="@+id/forgot_your_password"
                android:layout_width="wrap_content"
                android:textColor="#A8FFFFFF"
                android:textSize="15sp"
                android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>